force-app/main/default/objects/IdvPa_Application_Status_Config__mdt/IdvPa_Application_Status_Config__mdt.object-meta.xml
<CustomObject>
    <description>Individual program application&apos;s status configuration</description>
    <label>IdvPa Application Status Config</label>
    <pluralLabel>IdvPa Application Status Config</pluralLabel>
</CustomObject>