force-app/main/default/objects/IdvPa_Application_Status_Config__mdt/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <inlineHelpText>The option API value for the Application Status field.</inlineHelpText>
    <label>Application Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>