force-app/main/default/objects/IdvPa_Application_Status_Config__mdt/fields/Create_IPE__c.field-meta.xml
<CustomField>
    <fullName>Create_IPE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine whether the individual program enrollment should be created based on the selected individual program application status.</description>
    <inlineHelpText>Determine whether the individual program enrollment should be created based on the selected individual program application status.</inlineHelpText>
    <label>Create IPE</label>
    <type>Checkbox</type>
</CustomField>