force-app/main/default/objects/IdvPa_Application_Status_Config__mdt/fields/Include_In_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, applications with this status will be counted in the rollup.</description>
    <inlineHelpText>If true, applications with this status will be counted in the rollup.</inlineHelpText>
    <label>Include In Rollup</label>
    <type>Checkbox</type>
</CustomField>