force-app/main/default/objects/IdvPa_Application_Status_Config__mdt/fields/IPE_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>IPE_Enrollment_Status__c</fullName>
    <description>The default individual program enrollment status when creating or updating through the Individual Program Application, based on the selected application status.</description>
    <inlineHelpText>The default individual program enrollment status when creating or updating through the Individual Program Application, based on the selected application status.</inlineHelpText>
    <label>IPE Enrollment Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>