force-app/main/default/objects/IdvPa_Application_Status_Config__mdt/fields/Rollup_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Field_API_Name__c</fullName>
    <description>The API name of the target fields seperated by semicolons on reduivy__Study_Intake__c where the count should be stored (e.g., reduivy__Approved_Applications__c;reduivy__Booked_Places__c).</description>
    <inlineHelpText>The API name of the target fields seperated by semicolons on reduivy__Study_Intake__c where the count should be stored (e.g., reduivy__Approved_Applications__c;reduivy__Booked_Places__c).</inlineHelpText>
    <label>Rollup Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>