force-app/main/default/objects/IdvPa_Application_Status_Config__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Application_Status__c</columns>
    <columns>Type__c</columns>
    <columns>Active__c</columns>
    <columns>Include_In_Rollup__c</columns>
    <columns>Rollup_Field_API_Name__c</columns>
    <columns>Create_IPE__c</columns>
    <columns>IPE_Enrollment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>